--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>  
 
 	</div>
-	<script src="js/jquery.js"></script> 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="js/core_jquery.js"></script> 
     <script src="js/sandbox.js"></script> 
     <script src="js/modules.js"></script> 
